--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "vitest --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "Luiz Leite (luizffl)",
   "license": "ISC",
   "description": "",
   "devDependencies": {
