chore: :wrench: update project name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gena-di",
-  "description": "`gena-di` is a minimalist TypeScript dependency injection library for Node.js that automatically resolves and injects dependencies into constructors and functions. Designed with zero external dependencies, it powers the Gena framework.",
+  "name": "caai-di",
+  "description": "`caai-di` is a minimalist TypeScript dependency injection library for Node.js that automatically resolves and injects dependencies into constructors and functions. Designed with zero external dependencies, it powers the Caai framework.",
   "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -30,8 +30,8 @@
     "auto inject",
     "constructor injection",
     "function injection",
-    "gena",
-    "gena-di",
+    "caai",
+    "caai-di",
     "clean architecture",
     "zero dependencies",
     "service locator",
@@ -41,10 +41,10 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/luizffl/gena-di.git"
+    "url": "git+https://github.com/luizffl/caai-di.git"
   },
   "bugs": {
-    "url": "https://github.com/luizffl/gena-di/issues"
+    "url": "https://github.com/luizffl/caai-di/issues"
   },
   "description": "",
   "devDependencies": {
