chore: :wrench: change package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "caai-di",
-  "description": "`caai-di` is a minimalist TypeScript dependency injection library for Node.js that automatically resolves and injects dependencies into constructors and functions. Designed with zero external dependencies, it powers the Caai framework.",
+  "name": "@caai/di",
+  "description": "`@caai/di` is a minimalist TypeScript dependency injection library for Node.js that automatically resolves and injects dependencies into constructors and functions. Designed with zero external dependencies, it powers the Caai framework.",
   "version": "0.1.0",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
