--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
   bump-version-and-publish:
     needs: build-test
     runs-on: ubuntu-latest
+    environment: prod-npm
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop'
     steps:
       - name: Checkout code
@@ -42,6 +43,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
+          registry-url: "https://registry.npmjs.org/"
           cache: "npm"
 
       - name: Get latest tag
